<resources>
    <string name="app_name">Essay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Visitor</string>
    <string name="nav_header_subtitle">adam.yangt@gmail.com</string>
    <string name="nav_header_desc">User\'s avatar</string>
    <string name="action_settings">Settings</string>

    <!--String related to nav menu-->
    <string name="nav_menu_authorize">Authorize</string>
    <string name="nav_menu_drafts">Drafts</string>
    <string name="nav_menu_import">Import</string>
    <string name="nav_menu_export">Export</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="nav_menu_about">About</string>
    <string name="nav_menu_logout">Logout</string>
    <string name="nav_menu_register">Create Account</string>

    <!--String related to editor activity-->
    <string name="editor_toolbar_back">Back</string>
    <string name="editor_toolbar_cancel">Cancel</string>
    <string name="editor_toolbar_save">Save</string>
    <string name="editor_toolbar_done">Done</string>
    <string name="editor_toolbar_modify">Modify</string>
    <string name="editor_title">Title</string>
    <string name="editor_content_placeholder">Write down your thought</string>
    <string name="editor_title_placeholder">Title (Optional)</string>
    <string name="editor_private_show">Private</string>

    <!--String related to confirm dialog-->
    <string name="confirm_save_draft">Do you want to save as a draft?</string>
    <string name="confirm_yes">Save</string>
    <string name="confirm_no">Don\'t Save</string>
    <string name="confirm_cancel">Cancel</string>
    <string name="confirm_authorize">Authorize</string>

    <!--String related to essay list in main activity-->
    <string name="essay_untitled">Untitled</string>
    <string name="essay_date">2018/10/22 21:32</string>
    <string name="essay_img_des">private icon or public icon</string>
    <string name="essay_list_empty">No Essay</string>

    <!--Strings related to register and login-->
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">New User</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Sign in and register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_exist_username">This username is already exist</string>
    <string name="error_nonexistent_username">This username is nonexistent</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
