<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_authorize"
            android:icon="@drawable/ic_menu_key"
            android:title="@string/nav_menu_authorize" />
        <item
            android:id="@+id/nav_drafts"
            android:icon="@drawable/ic_drafts_black"
            android:title="@string/nav_menu_drafts" />
    </group>
    <!--<item android:title="File">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_import"-->
                <!--android:icon="@drawable/ic_menu_import"-->
                <!--android:title="@string/nav_menu_import" />-->
            <!--<item-->
                <!--android:id="@+id/nav_export"-->
                <!--android:icon="@drawable/ic_menu_export"-->
                <!--android:title="@string/nav_menu_export" />-->
        <!--</menu>-->
    <!--</item>-->
    <item android:title="User">
        <menu>
            <item
                android:id="@+id/nav_register"
                android:icon="@drawable/ic_register_black"
                android:title="@string/nav_menu_register" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/nav_menu_settings" />
            <!--<item-->
                <!--android:id="@+id/nav_about"-->
                <!--android:icon="@drawable/ic_menu_about"-->
                <!--android:title="@string/nav_menu_about" />-->
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout_black"
                android:title="@string/nav_menu_logout" />
        </menu>
    </item>
</menu>
