<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <ImageView
        android:id="@+id/lv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/essay_img_des"
        tools:srcCompat="@drawable/ic_menu_lock_open" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:maxLines="1"
            android:text="@string/essay_untitled"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/essay_date"
            android:textColor="#666666"
            android:textSize="13sp" />
    </LinearLayout>

</LinearLayout>
