<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_confirm_body"
        android:orientation="vertical"
        android:gravity="center">
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingLeft="20dp"-->
            <!--android:paddingRight="20dp"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:textSize="16sp"-->
            <!--android:visibility="gone"-->
            <!--android:text="Title" />-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/confirm_save_draft" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/confirm_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/confirm_no"
            android:layout_weight="1"
            android:background="@drawable/shape_confirm_no"
            android:gravity="center"/>

        <TextView
            android:id="@+id/confirm_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_weight="1"
            android:text="@string/confirm_yes"
            android:background="@drawable/shape_confirm_yes"
            android:gravity="center"/>
    </LinearLayout>



</LinearLayout>